--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ img {
   color: #fff;
 }
 .logo {
-  max-width: 60px;
+  max-width: 70px;
 }
 .header-content {
   display: flex;
@@ -42,9 +42,9 @@ img {
 }
 
 h1#name {
-  font-size: 80px;
+  font-size: 90px;
   font-weight: 300;
-  margin: 20px 0 20px -5px;
+  margin: 20px 0 0 -5px;
 }
 p#description {
   margin: 0 0 0 3px;
