--- a/style.css
+++ b/style.css
@@ -12,6 +12,24 @@ img {
   height: auto;
 }
 
+// logo floating
+.floating {  
+    animation-name: floating;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    margin-left: 30px;
+    margin-top: 5px;
+}
+
+@keyframes floating {
+    from { transform: translate(0,  0px); }
+    65%  { transform: translate(0, 15px); }
+    to   { transform: translate(0, -0px); }    
+}
+
+//
+
 .header {
   background-image: linear-gradient(60deg, black 10%, #22313fcc 70%),
     url(img/bg.jpg);
