--- a/style.css
+++ b/style.css
@@ -12,20 +12,24 @@ img {
   height: auto;
 }
 
-
-.floating {  
-    animation-name: floating;
-    animation-duration: 3s;
-    animation-iteration-count: infinite;
-    animation-timing-function: ease-in-out;
+.floating {
+  animation-name: floating;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
 }
 
 @keyframes floating {
-    from { transform: translate(0,  0px); }
-    65%  { transform: translate(0, 15px); }
-    to   { transform: translate(0, -0px); }    
+  from {
+    transform: translate(0, 0px);
+  }
+  65% {
+    transform: translate(0, 15px);
+  }
+  to {
+    transform: translate(0, -0px);
+  }
 }
-
 
 .header {
   background-image: linear-gradient(60deg, black 10%, #22313fcc 70%),
@@ -155,6 +159,70 @@ a span::before {
   font-weight: bold;
   transform: translateY(-3px) scale(1.05);
 }
+
+/* Footer */
+
+footer{
+  padding: 50px;
+  background: #262626;
+  color: #5d5d5d;
+  font-size: 20px;
+}
+
+footer h3, h4{
+  color: #c9c9c9;
+}
+
+
+.footer-info-name a{
+  color: #63d488;
+  text-decoration: none;
+} 
+.footer-info-name h3{
+  font-size: 30px;
+  margin-bottom: 0;
+}
+
+
+.footer-info{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-content: center;
+}
+
+.footer-info-box{
+  width: 30%;
+  border-bottom: 2px solid;
+}
+
+.info-box-title{
+  border-left: 2px solid #63d488;
+  padding: 7px;
+  padding-left: 20px;
+  background: #333131;
+}
+
+ul.footer-list {
+  list-style-type: none;
+  padding-left: 20px;
+  padding-bottom: 10px;
+}
+
+.footer-list li > a {
+  color: #63d488;
+  text-decoration: none;
+}
+
+.copyright{
+  text-align: center;
+  margin-top: 70px;
+}
+
+
+
+
 
 /* 
   ##Device = Desktops
@@ -289,4 +357,12 @@ a span::before {
     height: 4px;
     margin-left: -2px;
   }
+
+  .footer-info-box{
+    width: 100%;
+    border-bottom: 0;
+  }
+
 }
+
+/* footer background #262626    color white #c9c9c9 */
