--- a/style.css
+++ b/style.css
@@ -35,14 +35,39 @@ img {
   background-image: linear-gradient(60deg, black 10%, #22313fcc 70%),
     url(img/bg.jpg);
   height: 100vh;
+  background-attachment: fixed;
+  background-position: center;
   background-repeat: no-repeat;
-  background-position: right;
   background-size: cover;
   color: #fff;
 }
 .logo {
   max-width: 70px;
+  display: flex;
+  justify-content: space-between;
 }
+
+.logo-animation{
+  animation-name: floating;
+  animation-iteration-count: infinite;
+  width: 20px;
+  height: 30px;
+  border-top: 10px solid white;
+  border-bottom: 10px solid white;
+}
+
+.e{
+  border-left: 10px solid white;
+  animation-timing-function: ease-in;
+  animation-duration: 3s;
+}
+.j{
+  border-right: 10px solid white;
+  animation-timing-function: ease-out;
+  animation-duration: 2s;
+}
+
+
 .header-content {
   display: flex;
   align-items: center;
@@ -229,7 +254,7 @@ ul.footer-list {
 
 @media (min-width: 1281px) {
   .logo {
-    max-width: 70px;
+    
   }
   .header-text {
     width: 70%;
@@ -257,7 +282,7 @@ ul.footer-list {
 
 @media (min-width: 1025px) and (max-width: 1280px) {
   .logo {
-    max-width: 70px;
+   
   }
   .header-text {
     width: 70%;
@@ -281,7 +306,7 @@ ul.footer-list {
 
 @media (min-width: 768px) and (max-width: 1024px) {
   .logo {
-    max-width: 60px;
+    
   }
   .header-text {
     width: 70%;
@@ -301,7 +326,7 @@ ul.footer-list {
 
 @media (min-width: 481px) and (max-width: 767px) {
   .logo {
-    max-width: 50px;
+    
   }
   .header-text {
     width: 80%;
@@ -324,7 +349,7 @@ ul.footer-list {
 
 @media (min-width: 320px) and (max-width: 480px) {
   .logo {
-    max-width: 35px;
+    
   }
 
   .header-text {
